# suno-ai-vis-projectm-qt-qml

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  IDEAS.md  README.md  SECURITY.md  TODO.md  build.zsh
cmake/: CPM.cmake  CompilerWarnings.cmake
docs/: CHANGELOG-2024-01.md
qml/: main.qml
qml/components/: AccordionDrawer.qml  ThemeSwitch.qml  TimelineScrubber.qml  VisualizerCanvas.qml
qml/themes/: DarkTheme.qml  LightTheme.qml
qml/windows/: SettingsWindow.qml  SunoQueueWindow.qml
resources/icons/: .gitkeep
src/: main.cpp
src/audio/: AudioDecoder.cpp  AudioDecoder.h  AudioEngine.cpp  AudioEngine.h  StemProcessor.cpp  StemProcessor.h
src/core/: Application.cpp  Application.h  ConfigManager.cpp  ConfigManager.h  GitController.cpp  GitController.h  ThemeManager.cpp  ThemeManager.h
src/network/: GistUploader.cpp  GistUploader.h  SunoClient.cpp  SunoClient.h
src/ui/controllers/: MainWindowController.cpp  MainWindowController.h
src/ui/models/: TimelineModel.cpp  TimelineModel.h
src/video/: FrameCompositor.cpp  FrameCompositor.h  VideoCapture.cpp  VideoCapture.h
src/visualizer/: PresetManager.cpp  PresetManager.h  ProjectMImageProvider.cpp  ProjectMImageProvider.h  ProjectMRenderer.cpp  ProjectMRenderer.h  ProjectMWrapper.cpp  ProjectMWrapper.h
tests/: test_audio_decoder.cpp
